--- a/search.html
+++ b/search.html
@@ -1,27 +1,25 @@
 ---
-layout: search
+layout: default
+title: Search Results
 ---
-<form action="{{ site.baseurl }}/search.html" method="get">
-  <div class="input-group mb-3">
-      <input type="text" id="search-box" name="query" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="searchButton">
-      <button class="btn btn-outline-secondary" value="search" type="submit" id="searchButton">Go</button>
-    </div>      
-</form>
-
-<ul id="search-results">No Results</ul>
+<h1>Search Results</h1>
+<hr/> 
+<div class="list-group" id="search-results"></div>
 
 <script>
-  window.store = {
+  window.store = {  
     {% for post in site.posts %}
       "{{ post.url | slugify }}": {
         "title": "{{ post.title | xml_escape }}",
         "author": "{{ post.author | xml_escape }}",
         "category": "{{ post.category | xml_escape }}",
         "content": {{ post.content | strip_html | strip_newlines | jsonify }},
-        "url": "{{ post.url | xml_escape }}"
+        "url": "{{ post.url | xml_escape }}", 
+        "date": "{{ post.date | date: '%b %d, %Y' }}",
+        "tags": "{{ post.tags | join ' ' }}"
       }
-      {% unless forloop.last %}, {% endunless %}
-    {% endfor %}
+    {% unless forloop.last %}, {% endunless %}
+  {% endfor %}
   }; 
 </script>
 
