--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ title: Posts
       {% assign id = id | plus: 1 %}
       <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6" id="{{id}}" style="padding-top: 5px; padding-bottom: 5px;">
         <div class="card" style="width: 18rem;">
-          <img src="{{site.url}}/{{ site.posts[index].img }}" class="card-img-top" alt="...">
+          <img src="{{site.url}}/{{ site.posts[index].img }}" class="card-img-top" alt="">
           <div class="card-body">
             <h5 class="card-title">{{ site.posts[index].title }}</h5>
             <p class="card-text">{{ site.posts[index].description }}</p>
