--- a/search.html
+++ b/search.html
@@ -16,7 +16,7 @@ title: Search Results
         "content": {{ post.content | strip_html | strip_newlines | jsonify }},
         "url": "{{ post.url | xml_escape }}", 
         "date": "{{ post.date | date: '%b %d, %Y' }}",
-        "tags": "{{ post.tags | join ' ' }}"
+        "tags": "{{ post.tags | join: ' ' }}"
       }
     {% unless forloop.last %}, {% endunless %}
   {% endfor %}
